# libmcpp

./: .clang-format  .cursorrules  .cusorrules  .gitignore  CHANGELOG  README.md  conanbase.py  conanfile.py  libmcpp_analysis_report.json  log_migration_plan.md  meson.build  meson_options.txt  test.sh  test_normalize.cpp  yaml_implementation_plan.md
examples/: README.md  config.ini  example_plugin.cpp  example_plugin.h  exception_example.cpp  exception_using_macros.cpp  log_examples.cpp  main.cpp  meson.build  plugin_config.ini  plugin_example.cpp  reflect_example.cpp
examples/basic/: main.cpp  meson.build
examples/config/: example.ini
examples/database/: config.json  main.cpp  meson.build
examples/db/: main.cpp  meson.build
examples/dbus_connection/: main.cpp  meson.build
examples/dynamic_module/: example_module.cpp  example_module.h  example_service.h
examples/interprocess/: common.cpp  common.h  main.cpp  meson.build  multi_process_test_base.cpp  multi_process_test_base.h  shared_memory_test.h  shared_mutex_test.h  shared_rw_mutex_test.h  test_shared_memory.cpp  test_shared_memory_long_running.cpp  test_shared_mutex.cpp  tests_impl.cpp
examples/metric_example/: main.cpp  meson.build
examples/module_test/: README.md  main.cpp  meson.build  test_direct_dlopen.cpp  test_immediate_dlclose.cpp
examples/object_framework/: main.cpp  meson.build
examples/plugin/: config.json  config.yaml  example_plugin.cpp  main.cpp  meson.build
examples/plugins/: custom_appender.cpp  example_plugin.cpp  example_plugin.h
examples/task_service/: main.cpp  meson.build  test_service.cpp  test_service.h
libraries/log_appenders/: meson.build  meson_options.txt
libraries/mcapp/: meson.build  meson_options.txt
libraries/mcbase/: README.md  meson.build  meson_options.txt
libraries/mcdbus/: meson.build  meson_options.txt
libraries/mcengine/: meson.build  meson_options.txt
libraries/mcexpr/: meson.build  meson_options.txt
plugins/database/: database_plugin.cpp  meson.build
programs/devmon/: main.cpp  meson.build
src/: application.cpp  array.cpp  common.cpp  compress.cpp  dict.cpp  error.cpp  error_engine.cpp  error_message_converter.cpp  error_message_parser.cpp  exception.cpp  filesystem.cpp  json.cpp  json_wrapper.cpp  meson.build  mutable_dict.cpp  object.cpp  reflect.cpp  result.cpp  singleton.cpp  string.cpp  time.cpp  typed_variant.cpp  variant.cpp  variant_c_api.cpp  yaml.cpp
src/core/: application.cpp  config_manager.cpp  config_validator.cpp  connection_manager.cpp  default_supervisor.cpp  dependency_sorter.cpp  event.cpp  json_config_manager.cpp  meson.build  module_manager.cpp  object.cpp  plugin_manager.cpp  service.cpp  service_manager.cpp  singleton.cpp  supervisor.cpp  supervisor_manager.cpp  timer.cpp
src/crypto/: crc32.cpp  crc8.cpp  ecdsa_verify_sha256.cpp  meson.build
src/database/: byte_buffer.cpp  client.cpp  database.cpp  path_iterator.cpp  shared_tree_db.cpp  shared_tree_node.cpp  transaction.cpp
src/db/: byte_buffer.cpp  database.cpp  meson.build  path_iterator.cpp  transaction.cpp
src/dbus/: address.cpp  bus_mode_impl.cpp  bus_mode_impl.h  connection.cpp  connection_impl.cpp  connection_impl.h  dbus_application.cpp  dynamic_object.cpp  error.cpp  marshalled.cpp  match.cpp  meson.build  message.cpp  message_header.cpp  path.cpp  path_iterator.cpp  sd_bus.cpp  service_protocol.cpp  signal.cpp  signature.cpp  stream.cpp  validator.cpp
src/debounce/: average.cpp  binary_continue.cpp  continue.cpp  median.cpp  meson.build
src/dict/: dict.cpp  meson.build  mutable_dict.cpp
src/engine/: base.cpp  call_stack.cpp  context.cpp  engine.cpp  error.cpp  error_engine.cpp  event.cpp  expr.cpp  interface.cpp  meson.build  metadata.cpp  micro_component.cpp  object.cpp  path.cpp  path_iterator.cpp  property.cpp  result.cpp  service.cpp  std_interface.cpp  timer.cpp  utils.cpp
src/expr/: builtin.cpp  context.cpp  engine.cpp  function.cpp  lexer.cpp  meson.build  node.cpp  parser.cpp
src/fmt/: format.cpp  format_context.cpp  format_mc.cpp  format_parser.cpp  format_spec.cpp  formatter_chrono.cpp  meson.build
src/futures/: any_future.cpp  any_promise.cpp  callback_list.cpp  combinator.cpp  exceptions.cpp  futures_init.cpp  meson.build  state.cpp  state_pool.cpp
src/im/: byte_buffer.cpp  raw_iterator.cpp
src/interprocess/: meson.build  message_queue.cpp  shared_memory.cpp  shared_memory_allocator.cpp  shared_memory_manager.cpp  shared_mutex.cpp
src/introspection/: introspection_cache.cpp  introspection_parser.cpp  introspection_parser.h  meson.build
src/io/: io_buffer.cpp  io_stream.cpp  meson.build
src/log/: appender_factory.cpp  builtin_appenders.cpp  builtin_appenders.h  log_manager.cpp  log_message.cpp  logger.cpp  logging_internal.h  meson.build
src/luaclib/: meson.build
src/mc/: dict.cpp  mutable_dict.cpp  variant.cpp
src/mdb/: mdb_access.cpp  mdb_access.h  mdb_service.cpp  mdb_validator.cpp  meson.build  privilege.cpp  proxy_object.cpp  proxy_object.h
src/memory/: meson.build  shared_base.cpp
src/module/: meson.build  module_loader.cpp  module_manager.cpp
src/reflect/: enum_metadata.cpp  meson.build  module_node.cpp  reflect.cpp  reflection_factory.cpp  reflection_factory_impl.cpp  signature.cpp  struct_metadata.cpp
src/runtime/: actor_base.cpp  any_executor.cpp  condition_variable.cpp  executor.cpp  meson.build  runtime.cpp  runtime_context.cpp  runtime_executor.cpp  runtime_strand.cpp  thread_list.cpp  thread_pool.cpp
src/string/: format.cpp  meson.build  string.cpp
src/validate/: meson.build  validator.cpp
src/variant/: copy_context.cpp  io.cpp  meson.build  variant.cpp  variant_base.cpp  variant_base_cmp_op.cpp  variant_base_op.cpp  variant_c_api.cpp  variant_reference.cpp  (+1 more)
tests/: main.cpp  meson.build  test_application.cpp  test_error.cpp  test_event.cpp  test_futures.cpp  test_json.cpp  test_json_wrapper.cpp  test_object.cpp  test_pretty_name.cpp  test_priority_queue.cpp  test_signal_slot.cpp  test_time.cpp  test_timer.cpp  test_validate.cpp  test_validator.cpp  test_yaml.cpp  test_yaml_compound.cpp
(+1821 files in other folders)
