option(
       'shared_mutex_max_readers',
       type: 'integer',
       value: 0,
       description: '设置共享读写锁的最大并发读取数，默认为32',
)

option(
       'enable_shared_memory',
       type: 'boolean',
       value: false,
       description: '是否开启共享内存，默认为false',
)

option(
       'tests',
       type: 'boolean',
       value: true,
       description: '是否构建测试用例，默认为true',
)

option(
       'meson_build',
       type: 'boolean',
       value: true,
       description: 'Build in meson environment',
)