option(
       'shared_mutex_max_readers',
       type: 'integer',
       value: 0,
       description: '设置共享读写锁的最大并发读取数，默认为32',
)

option(
       'enable_conan_compile',
       type: 'boolean',
       value: false,
       description: '是否为conan构建，默认为false',
)

option(
       'tests',
       type: 'boolean',
       value: true,
       description: '是否构建测试用例，默认为true',
)

option(
       'meson_build',
       type: 'boolean',
       value: true,
       description: 'Build in meson environment',
)

option(
       'compatibility_tests',
       type: 'boolean',
       value: false,
       description: '是否构建兼容性测试程序（mc::format vs std::format），默认为false',
)

option(
       'enable_coverage',
       type: 'boolean',
       value: false,
       description: '是否启用代码覆盖率统计，默认为false',
)